Overall readme enhanced with an example overview table and also some minor corrections and addons